--- a/style.css
+++ b/style.css
@@ -4,15 +4,42 @@ html {
 }
 
 body{ 
-    margin: 0;;
+    margin: 0;  
 }
 
-.container {
+/* .container {
     position: relative;
-}
+    bottom: 0;
+    border: 1px solid yellow;
+    height: auto;
+} */
 
 .purple-hills {
     width: 100%;
     position: absolute;
     bottom: 0;
 }
+
+.icon-row {
+    position: absolute;
+    left: 45%;
+    bottom: 10%;
+    /* margin-left: auto;
+    margin-right: auto; */
+   
+}
+
+.icon-row svg {
+    margin-left: 20px;
+    margin-right: 20px;
+    cursor: pointer;
+}
+
+svg {
+    fill: #8385A9;
+}
+
+svg:hover {
+    fill: hsl(345, 95%, 68%);
+}
+  
