--- a/style.css
+++ b/style.css
@@ -54,16 +54,15 @@ body{
 }
 
 .timer {
-    margin-bottom: 20px;
-    border: 1px solid green;
+    /* border: 1px solid green; */
     height: 200px;
     display: flex;
     flex-direction: row;
 }
 
 .timer-item {
-    border: 1px solid pink;
-    margin: 0 10px;
+    /* border: 1px solid pink; */
+    margin: 0 auto;
     width: 200px;
 }
 
@@ -78,6 +77,17 @@ body{
 .num-text {
     font-size: 100px;
     color:hsl(345, 95%, 68%);
+    margin: 0 auto;
+    text-align: center;
+}
+
+.num {
+    /* background-color: hsl(236, 21%, 26%);*/ /*hsl(235, 16%, 14%) top*/ /*hsl(234, 17%, 12%) div shadow*/
+    background-image: linear-gradient(180deg, #2D2E45 50%, hsl(236, 21%, 26%) 50%); /*292B3F*/
+
+    border: 1px solid hsl(234, 17%, 12%);
+    border-radius: 10px;
+    box-shadow: 0px 10px 0px 0px hsl(234, 17%, 12%);
 }
 
 svg {
